--- a/js/lesson2.html
+++ b/js/lesson2.html
@@ -22,8 +22,11 @@
         // console.log(text)
         // Bài 1
             let text = "1 "
-            let a = 10
+            let a = 8
             let space = " "
+            for (let i = 1; i<a; i+=2){
+                console.log(space.repeat(a-i),text.repeat(i),)
+            }
             for (let i = 1; i<a; i+=2){
                 console.log(space.repeat(a-i),text.repeat(i),)
             }
