--- a/js/lesson 3/index1.html
+++ b/js/lesson 3/index1.html
@@ -10,8 +10,8 @@
 <body class="all">
     <script src="main.js"></script>
     <h1 class="head">LOGIN</h1>
-    <input type="" class="input" placeholder="user">
-    <input type="" class="input" placeholder="password">
-    <button class="login">login</button>
+    <input type="" class="input" placeholder="user here" id="usn">
+    <input type="password" class="input" placeholder="password here" id="pas">
+    <button class="login" onclick="GetUsnAndPas()">login</button>
 </body>
 </html>
