--- a/js/lesson 3/index2.html
+++ b/js/lesson 3/index2.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HOME</h1>
+    <h2 id="username">User: </h2>
+    <input type="text" placeholder="create note" id="note">
+    <button>Create</button>
+    <div id="list_note">
+
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
