--- a/js/lesson4/cart.html
+++ b/js/lesson4/cart.html
@@ -15,8 +15,7 @@
             <button onclick="cart()" class="log">Shopping cart</button>
         </div>
         <div class="demo">
-            <div class="list">
-            </div>
+            <div class="list" id="list">
             <div class="ctrl">
                 <button class="del" onclick="clear_cart()">Xóa toàn bộ</button>
                 <button class="pay" onclick="clear_cart()">Thanh toán</button>
