--- a/js/lesson4/duplicate_element.html
+++ b/js/lesson4/duplicate_element.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #heading {
+            color: red;
+        }
+
+        #heading .des {
+            color: blue
+        }
+    </style>
 </head>
+
 <body>
-    <h2 id="username">User: </h2>
-    <input type="text" placeholder="create note" id="note">
-    <button>Create</button>
-    <div id="list_note">
+    <div class="root">
 
     </div>
-    <script src="main.js"></script>
+    <script src="duplicate_element.js"></script>
 </body>
+
 </html>
